# Deriv-analysis-tool-

./: README.md  pyproject.toml  requirements.txt
docs/: ADVANCED.md
src/: market_data.py  portfolio.py  risk_manager.py
